--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -98,11 +98,13 @@ button {
     }
   }
   &__content {
-    margin-bottom: 60px;
+    padding-bottom: 60px;
     box-sizing: border-box;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     &:last-child {
-      margin-bottom: 0;
+      padding-bottom: 0;
     }
   }
 }
