[feature_upgrade_service_page] 「小規模法人 サポート」と「会計チェック「Light」」css調整

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,6 +8,7 @@ $orange-darken: #BB7000;
 $red: #D16565;
 $red-lighten: #e6a3a3;
 $black: #4A4A4A;
+$blue:#77B4CE;
 // settings
 $bg: #fbfff2;
 $baseColor: #FCF4E4;
