--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -42,6 +42,9 @@ button {
   &--bg-red {
     background-image: url(~assets/img/bg-red.png);
   }
+  &--bg-blue {
+    background-image: url(~assets/img/bg-blue.png);
+  }
   @include max-screen($break-point) {
     padding: 60px 0 40px;
   }
