--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -32,7 +32,8 @@ button {
     }
 }
 .section {
-  padding: 80px 0;
+  // padding: 80px 0;
+  padding: 34px 0;
   box-sizing: border-box;
   background-image: url(~assets/img/bg.png);
   background-size: cover;
