[feature_upgrade_service_page] pinkfix v2

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -36,18 +36,17 @@ button {
   padding: 34px 0;
   box-sizing: border-box;
   background-image: url(~assets/img/bg.png);
-  // background-size: cover;
-  // background-size:contain;
+  background-size: cover;
   @include max-screen($break-point) {
     background-size: 100% 100%;
   }
   &--bg-red {
-    background-image: url(~assets/img/bg-red.png);
-    background-size:200%;
+    // background-image: url(~assets/img/bg-red.png);
+    background-image: none;
+    background-color: #FAF1F1 ;
   }
   &--bg-red-contact{
     background-image: url(~assets/img/bg-red.png);
-    background-size:cover;
   }
   &--bg-blue {
     background-image: url(~assets/img/bg-blue.png);
