--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -10,20 +10,20 @@ $small-mobile-break-point: 320px;
 @mixin limitter {
   width: 100%;
   max-width: 1120px;
-  min-width: 1024px;
   margin: 0 auto;
   // padding: 0 60px;
   // Nav 調整
-  padding: 0 0px;
+  padding: 0 15px;
   box-sizing: border-box;
-  @include max-screen($break-point: $tablet-break-point) {
-    max-width: 700px;
-    min-width: 280px;
-    padding: 0 40px;
-  }
-  @include max-screen($break-point: $mobile-break-point) {
-    max-width: $mobile-break-point;
-    min-width: 280px;
-    padding: 0 20px;
-  }
+// @include max-screen($break-point: $tablet-break-point) {
+//     // max-width: 700px;
+//     //min-width: 280px;
+//     margin: 0 15px;
+//     padding: 0;
+//   }
+  // @include max-screen($break-point: $mobile-break-point) {
+  //   max-width: $mobile-break-point;
+  //   min-width: 280px;
+  //   padding: 0 0px;
+  // }
 }
